高分配率的解决方案